# playlist_manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.json  config.json.example  docker-compose.yml  env_config.py  pyproject.toml  start.ps1  start.sh  update.sh  validate_env.py
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/agents/: octo-playlist-sync.agent.md  playlist-runtime-triage.agent.md
.tools/fpcalc/: fpcalc.1.5.1.nupkg
app/: __init__.py  config.py  models.py
app/matching/: __init__.py  deezer.py  normalize.py
scripts/: backfill_song_xml.py  check_audio_health.py  create_library_db.py  enrich_musicbrainz_tags.py  fix_album_covers.py  fix_audio_tags.py  identify_tracks_by_audio.py  identify_tracks_from_layout.py  rebuild_song_xml.py  refresh_library_catalog.py  repair_song_xml_ids.py  run_catalog_batch.py  smoke_check.py
tests/: test_app.py  test_audio_health.py  test_audio_identification.py  test_deezer_download.py  test_enrich_musicbrainz_tags.py  test_fix_audio_tags.py  test_identify_tracks_by_audio.py  test_identify_tracks_from_layout.py  test_library_catalog.py  test_library_index.py  test_listenbrainz.py  test_matching.py  test_musicbrainz.py  test_navidrome_playlists.py  test_octo_fiesta.py  test_parsers.py  test_path_template.py  test_playlist_history.py  test_rebuild_song_xml.py  test_repair_song_xml_ids.py  test_settings_scheduler.py  test_song_metadata.py  test_soundcloud_download.py  test_tool_output.py  test_validate_env.py  test_youtube_download.py
(+49 files in other folders)
